RESOLVED FIXED283187
Missing underline when skipping descenders with thick underline value
https://bugs.webkit.org/show_bug.cgi?id=283187
Summary Missing underline when skipping descenders with thick underline value
alan
Reported 2024-11-15 11:27:05 PST
ssia
Attachments
Patch (6.13 KB, patch)
2024-11-15 11:59 PST, alan
no flags
[fast-cq]Patch (6.51 KB, patch)
2024-11-18 05:44 PST, alan
no flags
alan
Comment 1 2024-11-15 11:59:55 PST
alan
Comment 2 2024-11-18 05:44:45 PST
Created attachment 473260 [details] [fast-cq]Patch
EWS
Comment 3 2024-11-18 07:18:13 PST
Committed 286722@main (cd84be1f3dd7): <https://commits.webkit.org/286722@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473260 [details].
Radar WebKit Bug Importer
Comment 4 2024-11-18 07:19:16 PST
Note You need to log in before you can comment on or make changes to this bug.